tests/baselines/reference/requiredInitializedParameter1(strict=true).errors.txt
requiredInitializedParameter1.ts(1,13): error TS7006: Parameter 'a' implicitly has an 'any' type.
requiredInitializedParameter1.ts(1,23): error TS7006: Parameter 'c' implicitly has an 'any' type.
requiredInitializedParameter1.ts(2,13): error TS7006: Parameter 'a' implicitly has an 'any' type.
requiredInitializedParameter1.ts(3,13): error TS7006: Parameter 'a' implicitly has an 'any' type.
requiredInitializedParameter1.ts(3,23): error TS7006: Parameter 'c' implicitly has an 'any' type.
requiredInitializedParameter1.ts(4,13): error TS7006: Parameter 'a' implicitly has an 'any' type.
requiredInitializedParameter1.ts(4,23): error TS7019: Rest parameter 'c' implicitly has an 'any[]' type.
requiredInitializedParameter1.ts(11,1): error TS2554: Expected 3 arguments, but got 2.
requiredInitializedParameter1.ts(16,1): error TS2554: Expected 3 arguments, but got 1.


==== requiredInitializedParameter1.ts (9 errors) ====
    function f1(a, b = 0, c) { }
                ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
                          ~
!!! error TS7006: Parameter 'c' implicitly has an 'any' type.
    function f2(a, b = 0, c = 0) { }
                ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
    function f3(a, b = 0, c?) { }
                ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
                          ~~
!!! error TS7006: Parameter 'c' implicitly has an 'any' type.
    function f4(a, b = 0, ...c) { }
                ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
                          ~~~~
!!! error TS7019: Rest parameter 'c' implicitly has an 'any[]' type.
    
    f1(0, 1, 2);
    f2(0, 1, 2);
    f3(0, 1, 2);
    f4(0, 1, 2);
    
    f1(0, 1);
    ~~
!!! error TS2554: Expected 3 arguments, but got 2.
!!! related TS6210 requiredInitializedParameter1.ts:1:23: An argument for 'c' was not provided.
    f2(0, 1);
    f3(0, 1);
    f4(0, 1);
    
    f1(0);
    ~~
!!! error TS2554: Expected 3 arguments, but got 1.
!!! related TS6210 requiredInitializedParameter1.ts:1:16: An argument for 'b' was not provided.
    f2(0);
    f3(0);
    f4(0);